# markraken

./: README.md  commands.txt  hello_murmurhash3.ipynb  marker_representation-dev.ipynb  marker_representation-dev2.ipynb  marker_representation-markerizetest.ipynb  marker_representation.ipynb  marker_representation_re.ipynb  refseq_to_fasta.ipynb  run_length_encode.ipynb
c++/: CMakeLists.txt  HPC.cpp  HPC.h  hasher.cpp  hasher.h  index.cpp  index.h  main.cpp  markerizer.cpp  markerizer.h
c++/include/: FastaTools.cpp  FastaTools.h  MathUtil.h  NcbiTaxonomy.cpp  NcbiTaxonomy.h
c++/include/kseq/: kseq.hpp
